--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Snowpack - Simple Example</title>
+    <title>BookShelf</title>
   </head>
-
   <body>
     <div id="app"></div>
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./build/index.js"></script>
   </body>
 </html>
